[viessmann] refactoring for gateway selection
Signed-off-by: Ronny Grun <ronny.grun@t-online.de>