@@ -14,25 +14,22 @@ package org.smarthomej.binding.viessmann.internal.handler;
 
 import static org.smarthomej.binding.viessmann.internal.ViessmannBindingConstants.*;
 
-import java.time.Instant;
-import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.eclipse.jetty.client.HttpClient;
-import org.openhab.core.config.core.Configuration;
-import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.library.types.StringType;
-import org.openhab.core.storage.Storage;
-import org.openhab.core.thing.*;
+import org.openhab.core.thing.Bridge;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.Thing;
+import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.thing.binding.BaseBridgeHandler;
 import org.openhab.core.thing.binding.BridgeHandler;
 import org.openhab.core.thing.binding.ThingHandler;
@@ -42,7 +39,6 @@ import org.openhab.core.types.Command;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.smarthomej.binding.viessmann.internal.ViessmannGatewayDiscoveryService;
-import org.smarthomej.binding.viessmann.internal.api.ViessmannApiGateway;
 import org.smarthomej.binding.viessmann.internal.api.ViessmannCommunicationException;
 import org.smarthomej.binding.viessmann.internal.config.GatewayConfiguration;
 import org.smarthomej.binding.viessmann.internal.dto.device.DeviceDTO;
@@ -63,30 +59,14 @@ import com.google.gson.JsonSyntaxException;
 public class ViessmannGatewayHandler extends BaseBridgeHandler implements BridgeInterface {
     private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
-    private final Storage<String> stateStorage;
-
     private static final Set<String> ERROR_CHANNELS = Set.of("lastErrorMessage", "errorIsActive");
-    private static final String STORED_API_CALLS = "apiCalls";
-
-    private final HttpClient httpClient;
-    private final @Nullable String callbackUrl;
-
-    private @NonNullByDefault({}) ViessmannApiGateway api;
 
     protected @Nullable ViessmannGatewayDiscoveryService discoveryService;
-
-    private int apiCalls;
-    private boolean countReset = true;
-
-    private @Nullable String newInstallationId;
-    private @Nullable String newGatewaySerial;
 
     private String installationId = "";
     private String gatewaySerial = "";
 
-    private @Nullable ScheduledFuture<?> viessmannBridgePollingJob;
     private @Nullable ScheduledFuture<?> viessmannErrorsPollingJob;
-    private @Nullable ScheduledFuture<?> viessmannBridgeLimitJob;
 
     public @Nullable List<DeviceData> devicesData;
     protected final List<String> devicesList = new ArrayList<>();
@@ -94,17 +74,15 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
 
     private GatewayConfiguration config = new GatewayConfiguration();
 
-    public ViessmannGatewayHandler(Bridge bridge, Storage<String> stateStorage, HttpClient httpClient,
-            @Nullable String callbackUrl) {
+    public ViessmannGatewayHandler(Bridge bridge) {
         super(bridge);
-        this.stateStorage = stateStorage;
-        this.httpClient = httpClient;
-        this.callbackUrl = callbackUrl;
     }
 
-    public void setInstallationGatewayId(String newInstallation, String newGateway) {
-        newInstallationId = newInstallation;
-        newGatewaySerial = newGateway;
+    @Override
+    public void setConfigInstallationGatewayIdToDevice(@Nullable DeviceHandler handler) {
+        if (handler != null) {
+            handler.setConfigInstallationGatewayId(installationId, gatewaySerial);
+        }
     }
 
     /**
@@ -117,15 +95,8 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
         return new ArrayList<>(discoveredDeviceList);
     }
 
-    private void setConfigInstallationGatewayId() {
-        Configuration conf = editConfiguration();
-        conf.put("installationId", newInstallationId);
-        conf.put("gatewaySerial", newGatewaySerial);
-        updateConfiguration(conf);
-    }
-
     public List<Thing> getChildren() {
-        return getThing().getThings().stream().filter(Thing::isEnabled).collect(Collectors.toList());
+        return getThing().getThings().stream().filter(Thing::isEnabled).toList();
     }
 
     private boolean errorChannelsLinked() {
@@ -149,9 +120,11 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
 
     @Override
     public void dispose() {
-        stopViessmannBridgePolling();
+        BridgeHandler bridgeHandler = getBridgeHandler();
+        if (bridgeHandler != null) {
+            ((ViessmannAccountHandler) bridgeHandler).removeRegisteredErrorPollingGateway(gatewaySerial);
+        }
         stopViessmannErrorsPolling();
-        stopViessmannBridgeLimitReset();
     }
 
     @Override
@@ -165,43 +138,26 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
 
         GatewayConfiguration config = getConfigAs(GatewayConfiguration.class);
         this.config = config;
-        String storedApiCalls = this.stateStorage.get(STORED_API_CALLS);
-        if (storedApiCalls != null) {
-            apiCalls = Integer.parseInt(storedApiCalls);
-        } else {
-            apiCalls = 0;
-        }
-        newInstallationId = "";
-        newGatewaySerial = "";
 
         this.gatewaySerial = config.gatewaySerial;
         this.installationId = config.installationId;
 
-        //@formatter:off
-
-        /*
-        api = new ViessmannApiGateway(this, this.config.apiKey, httpClient, this.config.user, this.config.password,
-                this.config.installationId, this.config.gatewaySerial, callbackUrl);
-        */
-
-        if (this.config.installationId.isEmpty() || this.config.gatewaySerial.isEmpty()) {
-            // setConfigInstallationGatewayId();
-        }
-
         if (!config.disablePolling && errorChannelsLinked()) {
-            // startViessmannErrorsPolling(config.pollingIntervalErrors);
+            BridgeHandler bridgeHandler = getBridgeHandler();
+            if (bridgeHandler != null) {
+                ((ViessmannAccountHandler) bridgeHandler).addRegisteredErrorPollingGateway(gatewaySerial,
+                        config.pollingIntervalErrors);
+            }
+            startViessmannErrorsPolling(config.pollingIntervalErrors);
         }
+
         getAllDevices();
         if (!devicesList.isEmpty()) {
             updateBridgeStatus(ThingStatus.ONLINE);
-            // startViessmannBridgePolling(getPollingInterval(), 1);
         }
-
-        //@formatter:on
     }
 
-    //@formatter:off
-    private @Nullable BridgeHandler getBridgeHandler () {
+    private @Nullable BridgeHandler getBridgeHandler() {
         Bridge bridge = getBridge();
         if (bridge != null) {
             BridgeHandler handler = bridge.getHandler();
@@ -221,11 +177,9 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
 
             BridgeHandler handler = getBridgeHandler();
             if (handler != null) {
-                allDevices = ((ViessmannAccountHandler) handler).getAllDevices(installationId,
-                        gatewaySerial);
+                allDevices = ((ViessmannAccountHandler) handler).getAllDevices(installationId, gatewaySerial);
             }
 
-            countApiCalls();
             if (allDevices != null) {
                 devicesData = allDevices.data;
                 if (devicesData == null) {
@@ -247,11 +201,9 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
             logger.warn("Parsing Viessmann response fails: {}", e.getMessage());
         }
     }
-    //@formatter:on
 
     public void getDeviceError() {
-        logger.trace("Loading error-list from Viessmann Bridge");
-        //@formatter:off
+        logger.trace("Loading error-list from Viessmann Account Handler");
         try {
             EventsDTO errors = new EventsDTO();
             String eventType = "device-error";
@@ -260,7 +212,6 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
                 errors = ((ViessmannAccountHandler) handler).getSelectedEvents(eventType, installationId,
                         gatewaySerial);
             }
-            countApiCalls();
             logger.trace("Errors:{}", errors);
             if (errors != null && !errors.data.isEmpty()) {
                 String state = errors.data.get(0).body.errorDescription;
@@ -268,15 +219,12 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
                 updateState("lastErrorMessage", StringType.valueOf(state));
                 updateState("errorIsActive", OnOffType.from(active));
             }
-        /*
         } catch (ViessmannCommunicationException e) {
             updateBridgeStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
                     "Installation not reachable");
-         */
         } catch (JsonSyntaxException | IllegalStateException e) {
             logger.warn("Parsing Viessmann response fails: {}", e.getMessage());
         }
-        //@formatter:on
     }
 
     public boolean setData(@Nullable String url, @Nullable String json) throws ViessmannCommunicationException {
@@ -289,41 +237,8 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
         return false;
     }
 
-    private Integer getPollingInterval() {
-        if (this.config.pollingInterval > 0) {
-            return this.config.pollingInterval;
-        } else {
-            int errorApiCalls = 0;
-            if (errorChannelsLinked()) {
-                errorApiCalls = 1440 / this.config.pollingIntervalErrors;
-            }
-            return (86400 / (this.config.apiCallLimit - this.config.bufferApiCommands - errorApiCalls)
-                    * devicesList.size()) + 1;
-        }
-    }
-
-    private void countApiCalls() {
-        apiCalls++;
-        String apiCallsAsString = String.valueOf(apiCalls);
-        stateStorage.put(STORED_API_CALLS, apiCallsAsString);
-        updateState(COUNT_API_CALLS, DecimalType.valueOf(apiCallsAsString));
-    }
-
-    private void checkResetApiCalls() {
-        LocalTime time = LocalTime.now();
-        if (time.isAfter(LocalTime.of(0, 0, 1)) && (time.isBefore(LocalTime.of(1, 0, 0)))) {
-            if (countReset) {
-                logger.debug("Resetting API call counts");
-                apiCalls = 0;
-                countReset = false;
-            }
-        } else {
-            countReset = true;
-        }
-    }
-
     private void pollingFeatures() {
-        List<Thing> children = getThing().getThings().stream().filter(Thing::isEnabled).collect(Collectors.toList());
+        List<Thing> children = getChildren();
         for (Thing child : children) {
             ThingHandler childHandler = child.getHandler();
             if (childHandler instanceof DeviceHandler && ThingHandlerHelper.isHandlerInitialized(childHandler)) {
@@ -353,47 +268,38 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
                             handler.handleUpdate(featureDataDTO);
                         }
                     } else {
-                        String statusMessage = String.format("Features of Device ID %s is empty.", deviceId);
+                        String statusMessage = String.format("Features of Device ID \"%s\" is empty.", deviceId);
                         logger.warn(statusMessage);
-                        handler.updateThingStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
-                                statusMessage);
+                        handler.updateThingStatus(ThingStatus.UNKNOWN, ThingStatusDetail.NONE, statusMessage);
                     }
                 }
             } catch (ViessmannCommunicationException e) {
                 handler.updateThingStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
-                        "Device not reachable");
+                        String.format("Device not reachable %s", e.getMessage()));
             } catch (JsonSyntaxException | IllegalStateException e) {
                 logger.warn("Parsing Viessmann response fails: {}", e.getMessage());
             }
         }
     }
 
-    private void startViessmannBridgePolling(Integer pollingIntervalS, Integer initialDelay) {
-        ScheduledFuture<?> currentPollingJob = viessmannBridgePollingJob;
-        if (currentPollingJob == null) {
-            viessmannBridgePollingJob = scheduler.scheduleWithFixedDelay(() -> {
-                api.checkExpiringToken();
-                checkResetApiCalls();
-                if (!config.disablePolling) {
-                    logger.debug("Refresh job scheduled to run every {} seconds for '{}'", pollingIntervalS,
-                            getThing().getUID());
-                    pollingFeatures();
-                }
-            }, initialDelay, pollingIntervalS, TimeUnit.SECONDS);
-        }
-    }
-
     protected synchronized void manageErrorPolling() {
+        BridgeHandler bridgeHandler = getBridgeHandler();
+        if (bridgeHandler == null) {
+            return;
+        }
         ScheduledFuture<?> errorPollingJob = viessmannErrorsPollingJob;
         if (errorChannelsLinked() && errorPollingJob == null) {
-            stopViessmannBridgePolling();
-            startViessmannBridgePolling(getPollingInterval(), getPollingInterval());
+            ((ViessmannAccountHandler) bridgeHandler).addRegisteredErrorPollingGateway(gatewaySerial,
+                    config.pollingIntervalErrors);
+            ((ViessmannAccountHandler) bridgeHandler).stopViessmannBridgePolling();
+            ((ViessmannAccountHandler) bridgeHandler).startViessmannBridgePolling();
             startViessmannErrorsPolling(config.pollingIntervalErrors);
         } else {
             if (!errorChannelsLinked() && errorPollingJob != null) {
                 stopViessmannErrorsPolling();
-                stopViessmannBridgePolling();
-                startViessmannBridgePolling(getPollingInterval(), getPollingInterval());
+                ((ViessmannAccountHandler) bridgeHandler).removeRegisteredErrorPollingGateway(gatewaySerial);
+                ((ViessmannAccountHandler) bridgeHandler).stopViessmannBridgePolling();
+                ((ViessmannAccountHandler) bridgeHandler).startViessmannBridgePolling();
             }
         }
     }
@@ -408,53 +314,12 @@ public class ViessmannGatewayHandler extends BaseBridgeHandler implements Bridge
         }
     }
 
-    private void startViessmannBridgeLimitReset(Long delay) {
-        ScheduledFuture<?> currentPollingJob = viessmannBridgeLimitJob;
-        if (currentPollingJob == null) {
-            viessmannBridgeLimitJob = scheduler.scheduleWithFixedDelay(() -> {
-                logger.debug("Resetting limit and reconnect for '{}'", getThing().getUID());
-                api.checkExpiringToken();
-                checkResetApiCalls();
-                getAllDevices();
-                if (!devicesList.isEmpty()) {
-                    updateBridgeStatus(ThingStatus.ONLINE);
-                    startViessmannBridgePolling(getPollingInterval(), 1);
-                    stopViessmannBridgeLimitReset();
-                }
-            }, delay, 120, TimeUnit.SECONDS);
-        }
-    }
-
-    public void stopViessmannBridgePolling() {
-        ScheduledFuture<?> currentPollingJob = viessmannBridgePollingJob;
-        if (currentPollingJob != null) {
-            currentPollingJob.cancel(true);
-            viessmannBridgePollingJob = null;
-        }
-    }
-
     public void stopViessmannErrorsPolling() {
         ScheduledFuture<?> currentPollingJob = viessmannErrorsPollingJob;
         if (currentPollingJob != null) {
             currentPollingJob.cancel(true);
             viessmannErrorsPollingJob = null;
         }
-    }
-
-    public void stopViessmannBridgeLimitReset() {
-        ScheduledFuture<?> currentPollingJob = viessmannBridgeLimitJob;
-        if (currentPollingJob != null) {
-            currentPollingJob.cancel(true);
-            viessmannBridgeLimitJob = null;
-        }
-    }
-
-    public void waitForApiCallLimitReset(Long resetLimitMillis) {
-        stopViessmannBridgePolling();
-        stopViessmannErrorsPolling();
-        Long delay = (resetLimitMillis - Instant.now().toEpochMilli()) / 1000;
-        stopViessmannBridgeLimitReset();
-        startViessmannBridgeLimitReset(delay);
     }
 
     public void updateBridgeStatus(ThingStatus status) {
